# COMP6604-Project

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
app/: app.py  classify.py
trained_models/: resnext_50_transfer_learning.h5
